# kalo_app_v1

./: .gitignore  ACTUAL_BUILD_VERIFICATION_DEC9.md  AGENTS_HANDBOOK.md  AI_COACH_INTEGRATION_COMPLETE.md  AI_EXTRACTION_FIX_REPORT.md  BACKEND_API_REFERENCE.md  BACKEND_FULLY_OPERATIONAL.md  BUILD_FIX_SUMMARY_DEC9.md  BUILD_READY.md  BUILD_STATUS.txt  BUILD_VERIFICATION_DEC9.txt  CHANGES_SUMMARY.txt  COMPILATION_FIX_REPORT.md  COMPLETE_INTEGRATION_SUMMARY.md  COMPLETE_PROJECT_INDEX.md  DELIVERY_REPORT.md  DEPLOYMENT.md  FINAL_BUILD_STATUS.txt  FINAL_DELIVERY_REPORT.md  FINAL_FIX_SUMMARY.md  FINAL_VERIFICATION.txt  FIXES_SUMMARY.md  FIX_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  KALO_ARCHITECTURE.md  KALO_COMPLETE_SUMMARY.md  KALO_iOS_EXPANSION.md  LEAD_AGENT_SUMMARY.md  NETWORK_SETUP_GUIDE.md  NEXT_STEPS.md  PROJECT_CHECKLIST.md  QUICK_FIX_SUMMARY.txt  QUICK_START.sh  QUICK_START.txt  QUICK_START_AI_COACH.md  README_MASTER.md  READY_TO_TEST.md  REFACTOR_COMPLETION_REPORT.md  iOS_TEST_INSTRUCTIONS.md  kalo.db  (+4 more)
backend/: PROJECT_SUMMARY.md  main.py  pyproject.toml
backend/notebooks/: test_gemini.ipynb
backend/recipe_analyzer/: .gitignore  README.md  __init__.py  app.py  requirements.txt  setup.sh
backend/recipe_analyzer/agents/: __init__.py  nutrition_calculator.py  orchestrator.py  recipe_formatter.py  video_analyzer.py
backend/recipe_analyzer/formatters/: __init__.py  json_formatter.py  (+1 more)
backend/recipe_analyzer_v2/: README.md  __init__.py  agent.py
backend/recipe_analyzer_v3/: MULTI_INPUT_GUIDE.md  README.md  STREAMLIT_APP.md  __init__.py  agent.py  app.py  run_app.sh
(+203 files in other folders)
