[project]
name = "backend"
version = "0.1.0"
description = "KALO Backend - YouTube Recipe Analyzer with Google ADK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=0.1.0",
    "google-generativeai>=0.3.0",
    "yt-dlp>=2024.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
]
